--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
 div {
-  background-color: red;
-  width: 65px;
-  height: 65px;
-  border: 1px solid black;
-  margin-left: 10px;
-  background-clip: content-box;
+    background-color: red;
+    width: 65px;
+    height: 65px;
+    border: 1px solid black;
+    margin-left: 10px;
+    background-clip: content-box;
 }
 
+#first {
+    padding: 10px;
+}
+
+#second {
+    margin-top: 50px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+#third {
+    margin-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+#fourth {
+    margin-top: 70px;
+    padding-left: 150px;
+    padding-right: 80px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
